update dependencies + prettier formating

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
@@ -8,6 +8,7 @@
 		<meta charset="utf-8" />
 		<meta name="color-scheme" content="dark" />
 		<meta name="viewport" content="width=device-width" />
+		<!--prettier-ignore-->
 		<script>(()=>{function e() {let t='background-color';window.removeEventListener('load',e),document.documentElement.style.setProperty(t,localStorage.getItem(t)||'');}window.addEventListener('DOMContentLoaded',e);})();</script>
 		%sveltekit.head%
 	</head>
